clusters/pi/monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-to-github
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-to-github
  template:
    metadata:
      labels:
        app: alertmanager-to-github
    spec:
      serviceAccountName: alertmanager-to-github
      containers:
        - name: alertmanager-to-github
          image: ghcr.io/pfnet-research/alertmanager-to-github:v0.3.0
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
