clusters/pi/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-to-github
  namespace: monitoring
spec:
  selector:
    app: alertmanager-to-github
  ports:
    - name: http
      port: 8080
      targetPort: http
